tests/reference/asr-subroutine5-24e8434.stderr
input:4:9 semantic error: Variable 'd' not declared
c = a + d
        ^
